--- a/NEW/mysite/templates/index.html
+++ b/NEW/mysite/templates/index.html
@@ -24,7 +24,7 @@
     <div class="frame1">
       <img class="frame1-child" alt="" src="{% static 'medi/public/ellipse-13.svg' %}" />
 
-      <img class="image-9-icon" alt="" src="{% static 'medi/public/image-9@2x.png' %}" />
+      <img class="image-9-icon" alt="" src="{% static 'medi/public/image-9@2x.jpeg' %}" />
 
       <img
         class="frame1-item"
